[project]
name = "byoa-coach-demo"
version = "1.0.0"
description = "Simple BYOA Agent Demo — GLM-4-Flash + Mock Data"
requires-python = ">=3.13"
dependencies = [
  "langgraph>=1.1.0,<2.0.0",
  "langchain>=1.2.0,<2.0.0",
  "langchain-openai>=0.3.0,<1.0.0",
  "a2a-sdk[http-server]==0.3.22",
  "httpx>=0.27.0,<1.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]
